2009-11-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/main.py:
	* python/things/model/couch.py:
	  Implemented done and edit.

2009-11-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/main.py:
	* python/things/common/parse.py:
	  Do proper time/recurrence parsing and formatting.

2009-11-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/main.py:
	  Colorize output like yagtd, except we use prioritized color
	  according to the priority.

2009-11-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/main.py:
	* python/things/common/parse.py:
	* python/things/model/couch.py:
	  Add add and delete commands.
	  Add command interpreter.
	  Update Thing so we can calculate priority even if fields are
	  missing.

2009-10-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/common/parse.py (svn:executable):
	* python/things/common/parse.py (added):
	  Add parser lifted from yagtd.
	* python/things/command/main.py:
	  Add search command.
	* python/things/model/couch.py:
	  Add kwargs to view.

2009-10-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/open-things-by-urgency (added):
	* couchdb/views/open-things-by-urgency/map.js (added):
	* couchdb/views/things-by-id (added):
	* couchdb/views/things-by-id/map.js (added):
	  Add two more views for command line client.

2009-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/main.py:
	* python/things/model/couch.py:
	  Add priority() from yagtd.

2009-10-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* . (added):
	* python (added):
	* python/things (added):
	* python/things/model (added):
	* python/things/common (added):
	* python/things/command (added):
	* couchdb (added):
	  Initial creation

2009-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>
